# SLB-physical-layer-tech-docs

./: README.md
AI代码/: .gitignore
AI代码/6.2-120khz子载波间隔系统/6.2.2-基础帧结构和物理资源/nearlink-6.2.2/slb/: CMakeLists.txt  README.md
AI代码/6.2-120khz子载波间隔系统/6.2.2-基础帧结构和物理资源/nearlink-6.2.2/slb/example/: slb-phy-example.c
AI代码/6.2-120khz子载波间隔系统/6.2.2-基础帧结构和物理资源/nearlink-6.2.2/slb/include/: slb-antenna-port.h  slb-carrier.h  slb-comm-domain.h  slb-cot-tti.h  slb-cp-ofdm-symbol.h  slb-link.h  slb-passthrough-link.h  slb-phy-constants.h  slb-resource-element.h  slb-resource-grid.h  slb-rx-resource-locate.h  slb-superframe.h
AI代码/6.2-120khz子载波间隔系统/6.2.2-基础帧结构和物理资源/nearlink-6.2.2/slb/src/: slb-antenna-port.c  slb-carrier.c  slb-comm-domain.c  slb-cot-tti.c  slb-cp-ofdm-symbol.c  slb-link.c  slb-passthrough-link.c  slb-resource-element.c  slb-resource-grid.c  slb-rx-resource-locate.c  slb-superframe.c
AI代码/6.2-120khz子载波间隔系统/6.2.2-基础帧结构和物理资源/nearlink-6.2.2/slb/test/: demo-6221-cp-ofdm-symbol.c  demo-6222-superframe.c  demo-6223-cot-tti.c  demo-6224-carrier.c  demo-6225-resource-grid.c  demo-6228-comm-domain-link.c  demo-rx-resource-locate.c  slb-test-runner.c  slb-test.h
AI代码/6.2-120khz子载波间隔系统/6.2.3-物理层信号（6.2.3.1-6.2.3.8）/nearlink/slb/phy/signal/: CMakeLists.txt  run-demos.bat  slb-csi-rs.c  slb-csi-rs.h  slb-dmrs-d.c  slb-dmrs-d.h  slb-fts.c  slb-fts.h  slb-g-dmrs-c.c  slb-g-dmrs-c.h  slb-gold-seq.c  slb-gold-seq.h  slb-p-dmrs-c.c  slb-p-dmrs-c.h  slb-pas.c  slb-pas.h  slb-phy-signal.c  slb-phy-signal.h  slb-phy-types.c  slb-phy-types.h  slb-ref-signal-common.c  slb-ref-signal-common.h  slb-srs.c  slb-srs.h  slb-sts.c  slb-sts.h  slb-t-dmrs-c.c  slb-t-dmrs-c.h  slb-zc-seq.c  slb-zc-seq.h
AI代码/6.2-120khz子载波间隔系统/6.2.3-物理层信号（6.2.3.1-6.2.3.8）/nearlink/slb/phy/signal/demo/: demo-6-2-3-1-sync.c  demo-6-2-3-2-3-ref.c  demo-6-2-3-4-7-dmrs.c  demo-6-2-3-8-pas.c  demo-ref-formula.c  demo-ref-formula.h  demo-test-common.c  demo-test-common.h
AI代码/6.5物理层通用功能/: 6.5通用功能对外接口说明书.tex  Makefile  README.md  nl_phy_mod.h  nl_phy_zc.c  slb_phy.h  slb_phy_common.c  slb_phy_common.h  slb_phy_mod.c  slb_phy_mod.h  slb_phy_pwr_meas.c  slb_phy_pwr_meas.h  slb_phy_scfdma.c  slb_phy_scfdma.h  slb_phy_scram.c  slb_phy_scram.h  slb_phy_test.c  slb_phy_types.h  slb_phy_zc.c  slb_phy_zc.h
AI代码/6.5物理层通用功能/6.5物理层通用功能/: README.md  nl_phy.h  nl_phy_common.c  nl_phy_scfdma.c  nl_phy_scram.h  nl_phy_test.c  nl_phy_types.h
AI代码/6.5物理层通用功能（20260707）-根据命名skill/: Makefile  merge_tex_doc.py  nl_phy_common.h  nl_phy_mod.c  nl_phy_pwr_meas.c  nl_phy_pwr_meas.h  nl_phy_scfdma.h  nl_phy_scram.c  nl_phy_zc.h
整合文档/: 6.2.7-6.2.10.tex  具体章节分块.xlsx
整合文档/6.2_120KHz基础子载波间隔系统/: 6.2.1.tex  6.2.1（20260703）.tex  6.2.2.tex  6.2.2（20260703）.tex  6.2.3.tex  6.2.4（20260703）.tex  6.2.5（20260703）.tex  6.2.7-10.tex
整合文档/6.2_120KHz基础子载波间隔系统/2026.7.6 update/: SLB物理层6.2.1一般描述技术文档.tex  SLB物理层6.2.2基础帧结构和物理资源技术文档.tex  SLB物理层6.2.3物理层信号技术文档.tex  SLB物理层6.2.4物理层控制信息技术文档.tex  SLB物理层6.2.4物理层控制信息比特字段.tex  SLB物理层6.2.5物理层数据信息技术文档.tex
整合文档/6.5物理层通用功能/: 6.5.1-6.5.3.tex  6.5.1-6.5.3（20260701）.tex  6.5.1-6.5.3（20260702）.md  6.5.4-6.5.5.tex  6.5.6.tex  6.5.7-6.5.9.tex  SLB物理层6.5物理层通用功能技术文档（20260701）.tex
整合文档/6.6-位置测量流程/20260724-6.6-位置测量流程接口暴露/: SLB物理层6.6位置测量流程接口暴露技术文档.tex
整合文档/6.6-位置测量流程/6.6.2-距离位置信息测量/: 6.6.2.3基于双向复合信道的测距.tex  6.6.2快速定位.tex  SLB物理层6.6.1-6.6.2位置测量流程技术文档.tex  附录L双向复合信道计算方法.tex
(+3 files in other folders)
